--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <meta name="application-name" content="Ryu resume">
+    <meta name="description" content="My very own personal website. Basically this is just a résumé.">
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta name="google" content="notranslate">
+    <meta name="rating" content="General">
+    <meta name="referrer" content="no-referrer">
+    <link rel="license" href="./LICENSE">
+    <title>Ryu always wins!</title>
   </head>
   <body>
     ― Hello World! &#x1F609;
