Added starter stylesheet (closes #10)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="rating" content="General">
     <meta name="referrer" content="no-referrer">
     <link rel="license" href="./LICENSE">
+    <link rel="stylesheet" href="./assets/css/index.css" />
     <title>Ryu always wins!</title>
   </head>
   <body>
