Added general css and <main> (closes #13)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Ryu always wins!</title>
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main class="content">
+
+    </main>
   </body>
 </html>
