--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           </a>
         </div>
       </div>
+      <div class="intro">
+        ― I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.
+      </div>
     </main>
   </body>
 </html>
