Created timeline and additional info

--- a/index.html
+++ b/index.html
@@ -44,6 +44,165 @@
       <div class="intro">
         ― I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.
       </div>
+      <div class="flex columns">
+        <div class="column padded timeline">
+          <h2>EXPERIENCE</h2>
+          <div class="event">
+            <span class="year">2018</span>
+            <span class="body">Amongst many fighters of the past was featured in the movie "Ready Player One". Ryu ready always!</span>
+          </div>
+          <div class="event">
+            <span class="year">2017</span>
+            <span class="body">United with unknown until then to me Power Rangers to defeat resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</span>
+          </div>
+          <div class="event">
+            <span class="year">2016</span>
+            <span class="body">In "Street Fighter V" once and for all erased M.Bison from earth and tamed my inner Evil Ryu. Also spent some time on a side-project, mini-series "Street Fighter: Resurrection".            </span>
+          </div>
+          <div class="event">
+            <span class="year">2014</span>
+            <span class="body">Filmed in a martial arts tutorial "Street Fighter: Assassin's Fist", revealing to audience forgotten art of Ansatsuken.</span>
+          </div>
+          <div class="event">
+            <span class="year">2012</span>
+            <span class="body">The gods of intenet concluded me in the animated movie "Wreck-It Ralph", but rewarded me with a good drink for it!</span>
+          </div>
+          <div class="event">
+            <span class="year">2008</span>
+            <span class="body">My evil alter ego sneaked out of control and became a boss in "Street Fighter IV".</span>
+          </div>
+          <div class="event">
+            <span class="year">2006</span>
+            <span class="body">Borrowed my famous ripped gi to Soki in "Onimusha: Dawn of Dreams", gods informed me he needed that for the battle.</span>
+          </div>
+          <div class="event">
+            <span class="year">1998</span>
+            <span class="body">Defeated M. Bison in "Street Fighter Alpha 2", bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel universe in "Marvel vs. Capcom: Clash of Super Heroes" fighter,loyal to my employer, Capcom, of course.            </span>
+          </div>
+          <div class="event">
+            <span class="year">1997</span>
+            <span class="body">Reunited with Ken, my friend and opponent in "Street Fighter III". Men's friendship works mysteriously. Also helped with Arika project "Street Fighter EX"            </span>
+          </div>
+          <div class="event">
+            <span class="year">1996</span>
+            <span class="body">Took care of villainous Akuma in "Street Fighter Alpha 2". As a freelance on "Super Puzzle Fighter II Turbo" tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious enigmas, never again!            </span>
+          </div>
+          <div class="event">
+            <span class="year">1995</span>
+            <span class="body">Kept fighting in "Street Fighter Alpha: Warriors' Dreams".</span>
+          </div>
+          <div class="event">
+            <span class="year">1994</span>
+            <span class="body">Screened in a movie "Street Fighter", so that the batllesof past would not be forgotten by millenial generation.</span>
+          </div>
+          <div class="event">
+            <span class="year">1991</span>
+            <span class="body">Was promoted to "Street Fighter II". Didn't stay there for long, celebrations and office dwelling is not for me!</span>
+          </div>
+          <div class="event">
+            <span class="year">1987</span>
+            <span class="body">Started working for Capcom project "Street Fighter". My partner was Ken Masters, the boss'name was Sagat.</span>
+          </div>
+          <h2>PUBLICATIONS</h2>
+          <div class="event">
+            <span class="year">2011</span>
+            <span class="body">The true and humble story of me under pseudonim Tyler Wilde in an article "The evolution of Ken and Ryu"</span>
+          </div>
+          <div class="event">
+            <span class="year">2003-2008</span>
+            <span class="body">For 15 years I have published comic books with Udon Entertainment depicting my adventures, bitter lessons and great victories.</span>
+          </div>
+        </div>
+        <div class="column">
+          <h2>ACHIEVEMENTS</h2>
+          <ul>
+            <li>#1 in "Top 25 Street Fighter Characters" by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity" &#x2764;</li>
+            <li>#2 in "Top 20 Street Fighter Characters of All Time" by GameDaily, same council found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken<br />I was named "5th Most Powerful Street Fighter Character" by Screen Rant-san</li>
+            <li>#71 in "Top 100 Heroes of All Time" by UGO Networks, also recognized #2 in their list of "Top 50 Street Fighter Characters"<br />In a survey of 4000 online matches for Super Street Fighter IV, I got to be the most popular character, with 16.6% of players choosing my side</li>
+          </ul>
+          <h2>LIFE & EDUCATION</h2>
+          <div>To live is to fight and to fight is to live. I started learning fighting at my master Gouken's castle, I was beaten at head way too often to remember when exactly.</div>
+          <h2>LANGUAGES</h2>
+          <ul>
+            <li>🇺🇸 ENGLISH</li>
+            <li>🇨🇳 MANDARIN</li>
+            <li>🇯🇵 JAPANESE</li>
+          </ul>
+          <h2>LIFE LESSON</h2>
+          <div>You must defeat Sheng Long to stand a chance.</div>
+          <div class="accordion">
+            <input type="checkbox" class="open-ch" />
+            <img src="./assets/img/open.svg" class="open" />
+            <h2 class="header">SKILLS</h2>
+            <ul class="list">
+              <li>KARATE</li>
+              <li>ENERGY ATTACK</li>
+              <li>SHORYUKEN</li>
+              <li>WALKING</li>
+              <li>PLAYING VIDEOGAMES</li>
+              <li>DOING BURGERS</li> 
+              <li>MASHING POTATOES</li>
+              <li>COPYWRITING</li>
+              <li>ACTING</li>
+              <li>VOICEOVERS</li>
+            </ul>
+          </div>
+          <div class="accordion">
+            <input type="checkbox" class="open-ch" />
+            <img src="./assets/img/open.svg" class="open" />
+            <h2 class="header">CHARACTER</h2>
+            <ul class="list">
+              <li>NOBLE</li>
+              <li>DIRECT</li>
+              <li>BOLD</li>
+              <li>CONFIDENT</li>
+              <li>DARING</li>
+              <li>SCHIZOPHRENIC</li>
+              <li>DRAMATIC</li>
+              <li>PERSUASIVE</li>
+              <li>IMMEDIATE</li>
+              <li>WISE</li>
+            </ul>
+          </div>
+          <div class="accordion">
+            <input type="checkbox" class="open-ch" />
+            <img src="./assets/img/open.svg" class="open" />
+            <h2 class="header">LIKES 😃</h2>
+            <ul class="list">
+              <li>GI</li>
+              <li>VEGETABLES</li>
+              <li>BLOOD</li>
+              <li>SMALL MARSHMELLOWS</li>
+              <li>RED COLOR</li>
+              <li>KILLED ENEMY</li>
+            </ul>
+          </div>
+          <div class="accordion">
+            <input type="checkbox" class="open-ch" />
+            <img src="./assets/img/open.svg" class="open" />
+            <h2 class="header">DISLIKES 😞</h2>
+            <ul class="list">
+              <li>BISONS</li>
+              <li>GHOSTS</li>
+              <li>SMARTPHONES</li>
+              <li>SMELL OF SEAFOOD</li>
+              <li>BARBER SHOPS</li>
+              <li>SLEEVES</li>
+            </ul>
+          </div>
+          <div class="accordion">
+            <input type="checkbox" class="open-ch" />
+            <img src="./assets/img/open.svg" class="open" />
+            <h2 class="header">WANTS 🥺</h2>
+            <ul class="list">
+              <li>BE FIT</li>
+              <li>WRITE MORE BOOKS</li>
+              <li>FIND A GIRLFRIEND TO GO TO CINEMA WITH</li>
+              <li>KILL ALL OF AKUMA FAMILY</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
