--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <div class="contacts">
           <h2>Ryu Hoshi</h2>
           <a href="https://www.facebook.com/profile.php?id=100004808958030" target="_blank">
-            <img src="./assets/img/facebook.png" />
+            <img src="./assets/img/facebook.png" alt="Facebook" />
             Facebook
           </a>
           <a href="https://twitter.com/denjinryu" target="_blank">
-            <img src="./assets/img/twitter.png" />
+            <img src="./assets/img/twitter.png" alt="Twitter" />
             Twitter
           </a>
           <a href="https://www.instagram.com/sworn_ryu/" target="_blank">
-            <img src="./assets/img/instagram.png" />
+            <img src="./assets/img/instagram.png" alt="Instagram" />
             Instagram
           </a>
           <a href="mailto:ryuwins@gmail.com">
-            <img src="./assets/img/mail.png" />
+            <img src="./assets/img/mail.png" alt="Envelope" />
             Email me!
           </a>
         </div>
@@ -132,7 +132,7 @@
           <div>You must defeat Sheng Long to stand a chance.</div>
           <div class="accordion">
             <input type="checkbox" class="open-ch" />
-            <img src="./assets/img/open.svg" class="open" />
+            <img src="./assets/img/open.svg" class="open" alt="Triangle icon" />
             <h2 class="header">SKILLS</h2>
             <ul class="list">
               <li>KARATE</li>
@@ -149,7 +149,7 @@
           </div>
           <div class="accordion">
             <input type="checkbox" class="open-ch" />
-            <img src="./assets/img/open.svg" class="open" />
+            <img src="./assets/img/open.svg" class="open" alt="Triangle icon" />
             <h2 class="header">CHARACTER</h2>
             <ul class="list">
               <li>NOBLE</li>
@@ -166,7 +166,7 @@
           </div>
           <div class="accordion">
             <input type="checkbox" class="open-ch" />
-            <img src="./assets/img/open.svg" class="open" />
+            <img src="./assets/img/open.svg" class="open" alt="Triangle icon" />
             <h2 class="header">LIKES 😃</h2>
             <ul class="list">
               <li>GI</li>
@@ -179,7 +179,7 @@
           </div>
           <div class="accordion">
             <input type="checkbox" class="open-ch" />
-            <img src="./assets/img/open.svg" class="open" />
+            <img src="./assets/img/open.svg" class="open" alt="Triangle icon" />
             <h2 class="header">DISLIKES 😞</h2>
             <ul class="list">
               <li>BISONS</li>
@@ -192,7 +192,7 @@
           </div>
           <div class="accordion">
             <input type="checkbox" class="open-ch" />
-            <img src="./assets/img/open.svg" class="open" />
+            <img src="./assets/img/open.svg" class="open" alt="Triangle icon" />
             <h2 class="header">WANTS 🥺</h2>
             <ul class="list">
               <li>BE FIT</li>
