Added To Top button

--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
           </div>
         </div>
       </div>
+      <div class="to-top-button" id="toTop">
+        <div class="text">&uarr;</div>
+      </div>
     </main>
+    <footer>
+      <script src="./assets/js/toTop.js"></script>
+    </footer>
   </body>
 </html>
