--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
         </div>
       </div>
-      <div class="to-top-button" id="toTop">
+      <div class="to-top-button" id="toTop" title="Go to top!">
         <div class="text">&uarr;</div>
       </div>
     </main>
